--- a/src/main/resources/com/pooespol/proyecto2_heladeria/ArmaTuHelado1.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/ArmaTuHelado1.fxml
@@ -1,41 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.ArmaTuHelado1Controller">
    <children>
       <ImageView fitHeight="530.0" fitWidth="730.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="49.0" layoutY="55.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Paso1: Escoge tu base">
-         <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-      <Button layoutX="49.0" layoutY="165.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="173.0" style="-fx-background-color: #1b377e; -fx-font-family: Candara; -fx-font-weight: 900;" text="yogurt" textFill="WHITE">
-         <graphic>
-            <ImageView fitHeight="109.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" />
-         </graphic>
-      </Button>
-      <Button layoutX="504.0" layoutY="165.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="173.0" style="-fx-background-color: brown; -fx-font-family: Candara; -fx-font-weight: 900;" text="Helado" textFill="WHITE">
-         <graphic>
-            <ImageView fitHeight="105.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true" />
-         </graphic>
-      </Button>
-      <Button layoutX="278.0" layoutY="165.0" mnemonicParsing="false" prefHeight="158.0" prefWidth="173.0" style="-fx-background-color: yellow; -fx-font-family: Candara; -fx-font-weight: 900;" text="Vegano">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-         <graphic>
-            <ImageView fitHeight="121.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true" />
-         </graphic>
-      </Button>
-      <Label layoutX="33.0" layoutY="477.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor a pagar:" />
-      <Button layoutX="598.0" layoutY="473.0" mnemonicParsing="false" style="-fx-background-color: white; -fx-font-family: Candara; -fx-font-weight: 900;" text="Continuar" />
-      <Label layoutX="121.0" layoutY="342.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor" />
-      <Label layoutX="351.0" layoutY="342.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor" />
-      <Label layoutX="576.0" layoutY="342.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor" />
+      <VBox alignment="CENTER" prefHeight="530.0" prefWidth="730.0">
+         <children>
+            <Label style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Paso1: Escoge tu base">
+               <font>
+                  <Font size="36.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin>
+            </Label>
+            <GridPane prefHeight="402.0" prefWidth="730.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="281.0" minHeight="10.0" prefHeight="239.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="300.0" minHeight="10.0" prefHeight="88.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="221.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                     <children>
+                        <Label fx:id="lblValorPagar" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor a pagar:">
+                           <VBox.margin>
+                              <Insets left="40.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                     <children>
+                        <Button fx:id="btnContinuar" mnemonicParsing="false" onAction="#continuar" style="-fx-background-color: white; -fx-font-family: Candara; -fx-font-weight: 900;" text="Continuar">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets right="40.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                     <children>
+                        <Label fx:id="lblYogurt" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <Label fx:id="lblHelado" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <children>
+                        <Label fx:id="lblVengano" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </VBox>
+                  <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Button fx:id="btnYogurt" mnemonicParsing="false" onAction="#yogurt" prefHeight="158.0" prefWidth="173.0" style="-fx-background-color: #1b377e; -fx-font-family: Candara; -fx-font-weight: 900;" text="yogurt" textFill="WHITE">
+                           <graphic>
+                              <ImageView fitHeight="100.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@yogurt.jpg" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                     <GridPane.margin>
+                        <Insets bottom="30.0" />
+                     </GridPane.margin>
+                  </VBox>
+                  <VBox alignment="BOTTOM_CENTER" prefHeight="259.0" prefWidth="243.0" GridPane.columnIndex="1">
+                     <children>
+                        <Button fx:id="btnHelado" mnemonicParsing="false" onAction="#helado" prefHeight="158.0" prefWidth="173.0" style="-fx-background-color: brown; -fx-font-family: Candara; -fx-font-weight: 900;" text="Helado" textFill="WHITE">
+                           <graphic>
+                              <ImageView fitHeight="100.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@helado.jpg" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                     <padding>
+                        <Insets bottom="30.0" />
+                     </padding>
+                  </VBox>
+                  <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
+                     <children>
+                        <Button fx:id="btnVegano" mnemonicParsing="false" onAction="#vegano" prefHeight="158.0" prefWidth="173.0" style="-fx-background-color: yellow; -fx-font-family: Candara; -fx-font-weight: 900;" text="Vegano">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="100.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@heladoVegano1.jpg" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                     <GridPane.margin>
+                        <Insets bottom="30.0" />
+                     </GridPane.margin>
+                  </VBox>
+               </children>
+            </GridPane>
+         </children>
+      </VBox>
    </children>
 </Pane>
