--- a/src/main/resources/com/pooespol/proyecto2_heladeria/Bienvenida.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/Bienvenida.fxml
@@ -10,46 +10,46 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.BienvenidaController">
    <children>
-      <ImageView fitHeight="530.0" fitWidth="730.0" pickOnBounds="true" preserveRatio="true" />
-      <VBox alignment="CENTER" prefHeight="530.0" prefWidth="407.0" spacing="20.0">
+      <ImageView fx:id="imgWelcome" fitHeight="530.0" fitWidth="730.0" pickOnBounds="true" preserveRatio="true" />
+      <VBox alignment="CENTER" prefHeight="530.0" prefWidth="730.0" spacing="20.0">
          <children>
-            <GridPane alignment="CENTER" prefHeight="371.0" prefWidth="443.0">
+            <GridPane alignment="CENTER" prefHeight="445.0" prefWidth="730.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints />
                 <RowConstraints />
-                <RowConstraints maxHeight="250.0" minHeight="10.0" prefHeight="250.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="65.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="90.0" minHeight="10.0" prefHeight="56.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="325.0" minHeight="10.0" prefHeight="292.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="149.0" minHeight="10.0" prefHeight="86.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="98.0" minHeight="10.0" prefHeight="67.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="400.0" GridPane.rowIndex="2">
                      <children>
-                        <Label style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Bnnd">
+                        <Label fx:id="lblWelcome" style="-fx-font-family: Candara; -fx-font-weight: 900;">
                            <font>
-                              <Font size="36.0" />
+                              <Font size="48.0" />
                            </font>
                         </Label>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="49.0" prefWidth="400.0" GridPane.rowIndex="3">
+                  <VBox alignment="CENTER" prefHeight="64.0" prefWidth="730.0" GridPane.rowIndex="3">
                      <children>
-                        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="205.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Encuentra nuestros locales">
+                        <Button fx:id="btnLocales" mnemonicParsing="false" onAction="#encuentraLocales" prefHeight="40.0" prefWidth="245.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Encuentra nuestros locales">
                            <font>
-                              <Font size="14.0" />
+                              <Font size="18.0" />
                            </font>
                         </Button>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" prefHeight="56.0" prefWidth="378.0" GridPane.rowIndex="4">
+                  <VBox alignment="CENTER" prefHeight="71.0" prefWidth="730.0" GridPane.rowIndex="4">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="30.0" prefWidth="205.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Haz tu pedido">
+                        <Button fx:id="btnPedido" mnemonicParsing="false" onAction="#pedido" prefHeight="40.0" prefWidth="245.0" style="-fx-font-style: Candara; -fx-font-weight: 900;" text="Haz tu pedido">
                            <font>
-                              <Font size="14.0" />
+                              <Font size="18.0" />
                            </font>
                         </Button>
                      </children>
