--- a/src/main/resources/com/pooespol/proyecto2_heladeria/ArmaTuHelado1.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/ArmaTuHelado1.fxml
@@ -148,9 +148,9 @@
                   </VBox>
                   <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <children>
-                        <Label fx:id="message" textFill="RED">
+                        <Label fx:id="message" prefHeight="63.0" prefWidth="242.0" textAlignment="CENTER" wrapText="true">
                            <font>
-                              <Font size="18.0" />
+                              <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
                      </children>
