--- a/src/main/resources/com/pooespol/proyecto2_heladeria/EliminarComponente.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/EliminarComponente.fxml
@@ -6,15 +6,22 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="336.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.EliminarComponenteController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.EliminarComponenteController">
    <children>
-      <ImageView fitHeight="230.0" fitWidth="336.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="41.0" layoutY="64.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="¿Está seguro de eliminar el componente?">
+      <ImageView fx:id="imgEliminar" fitHeight="230.0" fitWidth="336.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="12.0" layoutY="61.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="¿Está seguro de eliminar el componente?" textFill="#f8f8f8">
          <font>
-            <Font size="14.0" />
+            <Font size="18.0" />
          </font>
       </Label>
-      <Button layoutX="96.0" layoutY="132.0" mnemonicParsing="false" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Aceptar" />
-      <Button layoutX="178.0" layoutY="132.0" mnemonicParsing="false" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Cancelar" />
+      <Button fx:id="btnAceptar" layoutX="40.0" layoutY="156.0" mnemonicParsing="false" onAction="#aceptar" style="-fx-background-color: #E1B4D4;" text="Aceptar" textFill="WHITE">
+         <font>
+            <Font name="Candara Bold" size="14.0" />
+         </font></Button>
+      <Button fx:id="btnCancelar" layoutX="228.0" layoutY="156.0" mnemonicParsing="false" onAction="#cancelar" style="-fx-background-color: #E1B4D4;" text="Cancelar" textFill="WHITE">
+         <font>
+            <Font name="Candara Bold" size="14.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
