--- a/src/main/resources/com/pooespol/proyecto2_heladeria/ArmaTuHelado5.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/ArmaTuHelado5.fxml
@@ -1,37 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.ArmaTuHelado5Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pooespol.proyecto2_heladeria.ArmaTuHelado5Controller">
    <children>
-      <ImageView fitHeight="600.0" fitWidth="500.0" pickOnBounds="true" preserveRatio="true" />
-      <Label layoutX="53.0" layoutY="25.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Pago">
+      <ImageView fx:id="imgArmaTuHelado5" fitHeight="530.0" fitWidth="750.0" pickOnBounds="true" preserveRatio="true" />
+      <RadioButton fx:id="op1" layoutX="62.0" layoutY="104.0" mnemonicParsing="false" text="Efectivo">
          <font>
-            <Font size="36.0" />
+            <Font name="Candara Bold" size="18.0" />
+         </font>
+      </RadioButton>
+      <Label layoutX="62.0" layoutY="28.0" text="Pago">
+         <font>
+            <Font name="Candara Bold" size="36.0" />
          </font>
       </Label>
-      <RadioButton layoutX="195.0" layoutY="93.0" mnemonicParsing="false" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Tarjeta de creadito" />
-      <RadioButton layoutX="55.0" layoutY="93.0" mnemonicParsing="false" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Efectivo" />
-      <Label layoutX="44.0" layoutY="144.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Detalle de pago">
+      <Button fx:id="btnConfirmar" layoutX="212.0" layoutY="475.0" mnemonicParsing="false" onAction="#confirmar" prefHeight="34.0" prefWidth="111.0" style="-fx-background-color: #E1B4D4;" text="Confirmar" textFill="WHITE">
          <font>
-            <Font size="14.0" />
+            <Font name="Candara Bold" size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnCancelar" layoutX="404.0" layoutY="475.0" mnemonicParsing="false" onAction="#cancelar" prefHeight="34.0" prefWidth="111.0" style="-fx-background-color: #E1B4D4;" text="Cancelar" textFill="WHITE">
+         <font>
+            <Font name="Candara Bold" size="18.0" />
+         </font>
+      </Button>
+      <RadioButton fx:id="op2" layoutX="261.0" layoutY="104.0" mnemonicParsing="false" text="Tarjeta de Crédito">
+         <font>
+            <Font name="Candara Bold" size="18.0" />
+         </font>
+      </RadioButton>
+      <HBox layoutX="48.0" layoutY="171.0" prefHeight="226.0" prefWidth="285.0">
+         <children>
+            <VBox prefHeight="323.0" prefWidth="145.0" spacing="20.0">
+               <children>
+                  <Label text="Detalle pago">
+                     <font>
+                        <Font name="Candara Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label text="Valor a pagar:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label text="Adicional Tarjeta:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label text="IVA:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label text="Total a pagar:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox prefHeight="226.0" prefWidth="130.0" spacing="15.0">
+               <children>
+                  <TextField fx:id="valor">
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <TextField fx:id="adicionalT" />
+                  <TextField fx:id="iva" />
+                  <TextField fx:id="total" />
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <HBox layoutX="363.0" layoutY="171.0" prefHeight="226.0" prefWidth="328.0">
+         <children>
+            <VBox fx:id="seccionLabel" prefHeight="200.0" prefWidth="145.0" />
+            <VBox fx:id="seccionField" prefHeight="200.0" prefWidth="173.0" />
+         </children>
+      </HBox>
+      <Label fx:id="mensaje" layoutX="192.0" layoutY="423.0" prefHeight="22.0" prefWidth="366.0" textAlignment="CENTER">
+         <font>
+            <Font name="Candara Bold Italic" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="49.0" layoutY="185.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Valor a pagar:" />
-      <Label layoutX="49.0" layoutY="224.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Adicional tarjeta:" />
-      <Label layoutX="52.0" layoutY="256.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="IVA:" />
-      <Label layoutX="49.0" layoutY="292.0" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Total a pagar:" />
-      <TextField layoutX="195.0" layoutY="181.0" />
-      <TextField layoutX="195.0" layoutY="220.0" />
-      <TextField layoutX="195.0" layoutY="252.0" />
-      <TextField layoutX="195.0" layoutY="288.0" />
-      <Button layoutX="321.0" layoutY="545.0" mnemonicParsing="false" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Confirmar" />
-      <Button layoutX="405.0" layoutY="545.0" mnemonicParsing="false" style="-fx-font-family: Candara; -fx-font-weight: 900;" text="Cancelar" />
    </children>
 </Pane>
