--- a/src/main/resources/com/pooespol/proyecto2_heladeria/Inicio.fxml
+++ b/src/main/resources/com/pooespol/proyecto2_heladeria/Inicio.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -54,7 +55,6 @@
                     </rowConstraints>
                      <children>
                         <TextField fx:id="user" prefHeight="25.0" prefWidth="155.0" GridPane.columnIndex="1" />
-                        <TextField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <Label style="-fx-font-family: Candara;" text="Usuario">
                            <font>
                               <Font size="16.0" />
@@ -65,6 +65,7 @@
                               <Font size="16.0" />
                            </font>
                         </Label>
+                        <PasswordField fx:id="password" prefHeight="25.0" prefWidth="155.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                </children>
